Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/Probability_Master__c.object-meta.xml
<CustomObject>
    <description>This object would hold the details of all the mandatory fields and their values.This object would basically help us to design the matrix for cost calculation and data display.</description>
    <label>Probability Master</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Probability Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Probability Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>