Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/Combination_for_calculation__c.field-meta.xml
<CustomField>
    <fullName>Combination_for_calculation__c</fullName>
    <description>this combination is used for automatic calculation of products when we enter a project. This field calculation is used in coding</description>
    <formula>Text(Property_Type__c) +&apos;-&apos;+  text(SWR_System_to_be_Deployed__c) +&apos;-&apos;+  text(Dimension_of_Stack__c) +&apos;-&apos;+  text(Material__c) +&apos;-&apos;+ text(Number_of_Floors_Min__c)  +&apos;-&apos;+ text(Number_of_Floors_Max__c)</formula>
    <label>Combination for calculation</label>
    <type>Text</type>
</CustomField>