Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/Dimension_of_Stack__c.field-meta.xml
<CustomField>
    <fullName>Dimension_of_Stack__c</fullName>
    <label>Dimension of Stack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>110mm</fullName>
            </value>
            <value>
                <fullName>160mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>