Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/Internal_Plumbing_Mix__c.field-meta.xml
<CustomField>
    <fullName>Internal_Plumbing_Mix__c</fullName>
    <label>Internal Plumbing Mix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>Aqualife</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>