Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>Type of material required for the property</description>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Silent Plus</fullName>
            </value>
            <value>
                <fullName>Silent and SWR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>