Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/Number_of_Floors_Max__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Floors_Max__c</fullName>
    <label>Number of Floors(Max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>