Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/Number_of_Floors_Min__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Floors_Min__c</fullName>
    <description>Number of floors for a particular  property type</description>
    <label>Number of Floors(Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>