Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Global_Set</valueSetName>
    </valueSet>
</CustomField>