Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/fields/SWR_System_to_be_Deployed__c.field-meta.xml
<CustomField>
    <fullName>SWR_System_to_be_Deployed__c</fullName>
    <description>Drainage to be deployed  field in the Project</description>
    <label>SWR System to be Deployed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Single Stack with P.A.P.A &amp; A.A.V</fullName>
            </value>
            <value>
                <fullName>Single Stack with Stack - Aerator</fullName>
            </value>
            <value>
                <fullName>Single Stack with Swept Tee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>