Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/Bathroom.recordType-meta.xml
<RecordType>
    <fullName>Bathroom</fullName>
    <active>true</active>
    <description>This recordtype would be of bathroom type in order to perform  the calculation defined in matrix for property and its respective bathroom</description>
    <label>Bathroom</label>
</RecordType>