Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/BlazeMaster.recordType-meta.xml
<RecordType>
    <fullName>BlazeMaster</fullName>
    <active>true</active>
    <label>BlazeMaster</label>
</RecordType>