Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/Grease_Interceptors.recordType-meta.xml
<RecordType>
    <fullName>Grease_Interceptors</fullName>
    <active>true</active>
    <label>Grease Interceptors</label>
</RecordType>