Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/Kitchen.recordType-meta.xml
<RecordType>
    <fullName>Kitchen</fullName>
    <active>true</active>
    <description>For the purpose of calculating the price based on the matrix for its property and its respective Kitchen</description>
    <label>Kitchen</label>
</RecordType>