Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/Length_of_Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Length_of_Pipeline</fullName>
    <active>true</active>
    <label>Length of Pipeline</label>
</RecordType>