Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/PAPA_and_AAV.recordType-meta.xml
<RecordType>
    <fullName>PAPA_and_AAV</fullName>
    <active>true</active>
    <label>PAPA and AAV</label>
</RecordType>