Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/Project_Area.recordType-meta.xml
<RecordType>
    <fullName>Project_Area</fullName>
    <active>true</active>
    <description>For the purpose of calculating the price based on the matrix for its property and its respective project area</description>
    <label>Project Area</label>
</RecordType>