Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/recordTypes/Watertank.recordType-meta.xml
<RecordType>
    <fullName>Watertank</fullName>
    <active>true</active>
    <label>Watertank</label>
</RecordType>