Partial_14Dec2021/force-app/main/default/objects/Probability_Master__c/listViews/All_Masters.listView-meta.xml
<ListView>
    <fullName>All_Masters</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Price__c</columns>
    <columns>SWR_System_to_be_Deployed__c</columns>
    <columns>Number_of_Floors_Max__c</columns>
    <columns>Dimension_of_Stack__c</columns>
    <columns>Internal_Plumbing_Mix__c</columns>
    <columns>Combination_for_calculation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Combination_for_calculation__c</field>
        <operation>equals</operation>
        <value>Residential-Conventional-110mm-SWR-0-18</value>
    </filters>
    <label>All Masters</label>
</ListView>